--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,15 @@ input {
   border-color: none;
 }
 header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  margin: 0 auto;
+  height: auto;
+  width: 100%;
+}
+.intro {
   /* background: url(./img/header.jpg) center/cover no-repeat; */
   background: url(./img/header.jpg) center / 100% auto no-repeat,
     lightgray 50% / cover no-repeat;
@@ -44,6 +53,8 @@ header {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
+  position: relative;
+  z-index: 0;
 }
 
 .scroll__header {
@@ -177,7 +188,7 @@ header {
 .container {
   display: flex;
   justify-content: center;
-  padding-top: 109px;
+  padding-top: 89px;
 }
 
 .intro__title {
@@ -856,19 +867,19 @@ label span:hover {
   margin: 0;
 }
 
-.avtor {
+.author {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
 
-.avtor img {
+.author img {
   width: 75px;
   height: 75px;
   border-radius: 100px;
 }
 
-.avtor__description h1 {
+.author__description h1 {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -879,7 +890,7 @@ label span:hover {
   margin-bottom: 10px;
 }
 
-.avtor__description span {
+.author__description span {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -979,7 +990,7 @@ label span:hover {
 }
 .story__back {
   box-sizing: border-box;
-  padding: 50px;
+  padding: 60px;
   border-radius: 50px;
   position: inherit;
   width: 1170px;
@@ -1206,7 +1217,7 @@ footer h3 {
   color: #1b1f2b;
 }
 
-footer span:hover {
+.block__footer .nav__social:hover span {
   border-bottom: 1px solid #1b1f2b;
 }
 span a:active {
@@ -1289,7 +1300,7 @@ span a:active {
   }
 }
 @media (max-width: 1920px) {
-  header {
+  .intro {
     background: url(./img/header.jpg) center/cover no-repeat;
 
     height: 52rem;
@@ -1299,7 +1310,8 @@ span a:active {
   }
 }
 @media (max-width: 1200px) {
-  .header__inner {
+  .header__inner,
+  .footer__content {
     padding: 20px;
   }
 }
@@ -1320,7 +1332,7 @@ span a:active {
   .intro__inner p br {
     display: none;
   }
-  header {
+  .intro {
     background: linear-gradient(
         180deg,
         rgba(0, 0, 0, 0.4) 0%,
@@ -1413,10 +1425,10 @@ span a:active {
   .card__item p {
     font-size: 18px;
   }
-  .avtor__description h1 {
+  .author__description h1 {
     font-size: 24px;
   }
-  .avtor img {
+  .author img {
     width: 50px;
     height: 50px;
   }
@@ -1574,7 +1586,7 @@ span a:active {
   .intro__title {
     font-size: 55px;
     width: 100%;
-    height: 100%;
+    height: auto;
   }
   .main__title {
     font-size: 40px;
@@ -1745,7 +1757,7 @@ span a:active {
   }
 }
 @media (max-width: 360px) {
-  header {
+  .intro {
     background: linear-gradient(
         180deg,
         rgba(0, 0, 0, 0.4) 0%,
@@ -1771,7 +1783,7 @@ span a:active {
     margin: 20px;
     margin-top: -0.88px;
   }
-  header {
+  .intro {
     width: 360px;
     height: 530px;
   }
@@ -1972,10 +1984,10 @@ span a:active {
   .card__item p {
     font-size: 16px;
   }
-  .avtor__description h1 {
+  .author__description h1 {
     font-size: 23px;
   }
-  .avtor__description span {
+  .author__description span {
     font-size: 16px;
   }
 
@@ -2130,7 +2142,7 @@ span a:active {
 }
 
 @media (max-width: 359px) {
-  header {
+  .intro {
     background: linear-gradient(
         180deg,
         rgba(0, 0, 0, 0.4) 0%,
